syntax = "proto3";

package treaty;
option go_package = ".;treaty";

enum ServerType{
  SNone = 0;
  Balancer = 1; //gate server
  Connector = 2; //connector server
  Game = 3; //game server
}

enum CodeType{
  CodeSuccess = 0; //成功
  CodeFailed = 1;//失败
}

enum MsgId{
  Msg_None = 0;

}

message Server{
  int32 server_id = 1;
  ServerType server_type = 2;
  string server_name = 3;
  string server_ip = 4;
  int32  client_port = 5;
}

message BalanceResult{
  CodeType code =1 ; //0-成功 1-失败
  Server server = 2;
}